# hdb_resale_chat_bot

./: .python-version  Makefile  README.md
docs/docs/: index.md
hdb_resale_chat_bot/: README.md  __init__.py  dataset.py  features.py  plots.py  pyproject.toml
hdb_resale_chat_bot/docs/: mkdocs.yml
hdb_resale_chat_bot/hdb_resale_chat_bot/modeling/: train.py
hdb_resale_chat_bot/modeling/: predict.py
models/: preprocessing_noscaler.py  preprocessing_rb.py
notebooks/Boon_Kee/: BK-hdb-model.ipynb  BK-hdb.ipynb
notebooks/Felicia/: EDA 1 Apr.ipynb  Untitled.ipynb
notebooks/Hui_Ling/: hui_ling_eda.ipynb  preprocessing_noscaler_v2.py
