[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hdb_resale_chat_bot"
version = "0.0.1"
description = "HDB Resale Chat Bot"
authors = [
  { name = "Batch_1971_Le_wagon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.10.6"


[tool.ruff]
line-length = 99
src = ["hdb_resale_chat_bot"]
include = ["pyproject.toml", "hdb_resale_chat_bot/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hdb_resale_chat_bot"]
force-sort-within-sections = true

